--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,16 @@
 ext.languageName = "TextGenGen"
-ext.mpsVersion = "2023.3"
-ext.mpsPlugins = [ ]
-ext.customMpsPlugins = [ "de.itemis.mps.extensions": "https://artifacts.itemis.cloud/repository/maven-mps/de/itemis/mps/extensions/2023.2.2822.0952ae9/extensions-2023.2.2822.0952ae9.zip" ]
+ext.mpsVersion = "2024.1"
+ext.mpsPlugins = [
+        "mps-grammar-cells[2023.3]": 13242,
+        // we only need grammar cells, since there is no 2024.1 yet, we need to specify all transitive dependencies also for 2023.3
+        "de.itemis.mps.selection[2023.3]": 13230,
+        "de.itemis.mps.celllayout[2023.3]": 13239,
+        "de.slisson.mps.richtext[2023.3]": 13254,
+        "de.slisson.mps.hacks[2023.3]": 13235,
+        "de.slisson.mps.editor.multiline[2023.3]": 13253,
+        "de.itemis.mps.extensions.build[2023.3]": 17136,
+]
+ext.customMpsPlugins = [ ]
 
 apply from: 'gradle/init-gradle-scripts.gradle'
 
