--- a/build.xml
+++ b/build.xml
@@ -43,10 +43,8 @@
   <generator-settings id="m2m-defaults" strictMode="true" parallelThreads="8" inplaceTransform="false" warnWrongChild="true" createStaticRefs="true" skipUnmodifiedModels="${mps.generator.skipUnmodifiedModels}" />
   
   <target name="assemble" depends="classes, declare-mps-tasks">
-    <mkdir dir="${build.layout}" />
-    <mkdir dir="${build.tmp}/default/TextGenGen.zip" />
-    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)" />
-    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/lib" />
+    <mkdir dir="${build.layout}/TextGenGen (fum)" />
+    <mkdir dir="${build.layout}/TextGenGen (fum)/lib" />
     <mkdir dir="${build.tmp}/default/TextGenGen (fum).jar" />
     <mkdir dir="${build.tmp}/default/TextGenGen (fum).jar/META-INF" />
     <echoxml file="${build.tmp}/default/TextGenGen (fum).jar/META-INF/plugin.xml">
@@ -59,18 +57,18 @@
         <depends>jetbrains.mps.core</depends>
         <description>Editor to TextGen convertor</description>
         <vendor>JetBrains</vendor>
-        <idea-version since-build="241" until-build="241.*" />
+        <idea-version since-build="243" until-build="243.*" />
         
         <extensions defaultExtensionNs="com.intellij">
           <mps.LanguageLibrary dir="/languages" />
         </extensions>
       </idea-plugin>
     </echoxml>
-    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/lib/TextGenGen (fum).jar" duplicate="preserve">
+    <jar destfile="${build.layout}/TextGenGen (fum)/lib/TextGenGen (fum).jar" duplicate="preserve">
       <fileset dir="${build.tmp}/default/TextGenGen (fum).jar" />
     </jar>
-    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages" />
-    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen" />
+    <mkdir dir="${build.layout}/TextGenGen (fum)/languages" />
+    <mkdir dir="${build.layout}/TextGenGen (fum)/languages/TextGenGen" />
     <mkdir dir="${build.tmp}/default/TextGenGen.javastubs.jar" />
     <mkdir dir="${build.tmp}/default/TextGenGen.javastubs.jar/META-INF" />
     <echoxml file="${build.tmp}/default/TextGenGen.javastubs.jar/META-INF/module.xml">
@@ -86,7 +84,7 @@
         <sources jar="TextGenGen.javastubs-src.jar" descriptor="TextGenGen.javastubs.msd" />
       </module>
     </echoxml>
-    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen/TextGenGen.javastubs.jar" duplicate="preserve">
+    <jar destfile="${build.layout}/TextGenGen (fum)/languages/TextGenGen/TextGenGen.javastubs.jar" duplicate="preserve">
       <fileset dir="${build.tmp}/java/out/TextGenGen.javastubs" />
       <fileset dir="${project_home}/solutions/TextGenGen.javastubs/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
       <fileset dir="${build.tmp}/default/TextGenGen.javastubs.jar" />
@@ -94,7 +92,7 @@
     <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-TextGenGen.javastubs-models">
       <fileset dir="${project_home}/solutions/TextGenGen.javastubs/models" includes="**/*.mps, **/*.mpsr, **/.model" />
     </copyModels>
-    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen/TextGenGen.javastubs-src.jar" duplicate="preserve">
+    <jar destfile="${build.layout}/TextGenGen (fum)/languages/TextGenGen/TextGenGen.javastubs-src.jar" duplicate="preserve">
       <fileset dir="${project_home}/solutions/TextGenGen.javastubs/source_gen">
         <exclude name="**/trace.info" />
         <exclude name="**/exports" />
@@ -160,12 +158,149 @@
         <sources jar="TextGenGen.plugin-src.jar" descriptor="TextGenGen.plugin.msd" />
       </module>
     </echoxml>
-    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen/TextGenGen.plugin.jar" duplicate="preserve">
+    <jar destfile="${build.layout}/TextGenGen (fum)/languages/TextGenGen/TextGenGen.plugin.jar" duplicate="preserve">
       <fileset dir="${build.tmp}/java/out/TextGenGen.plugin" />
       <fileset dir="${project_home}/solutions/TextGenGen.plugin/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
       <fileset dir="${build.tmp}/default/TextGenGen.plugin.jar" />
     </jar>
     <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-TextGenGen.plugin-models">
+      <fileset dir="${project_home}/solutions/TextGenGen.plugin/models" includes="**/*.mps, **/*.mpsr, **/.model" />
+    </copyModels>
+    <jar destfile="${build.layout}/TextGenGen (fum)/languages/TextGenGen/TextGenGen.plugin-src.jar" duplicate="preserve">
+      <fileset dir="${project_home}/solutions/TextGenGen.plugin/source_gen">
+        <exclude name="**/trace.info" />
+        <exclude name="**/exports" />
+        <exclude name="**/checkpoints" />
+        <exclude name="**/*.mps" />
+      </fileset>
+      <zipfileset file="${basedir}/solutions/TextGenGen.plugin/TextGenGen.plugin.msd" prefix="module" />
+      <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-TextGenGen.plugin-models" prefix="module/models" />
+    </jar>
+    <copy todir="${build.layout}/TextGenGen (fum)">
+      <fileset file="${project_home}/solutions/TextGenGen.javastubs/java_src/lib/editorToText.jar" />
+    </copy>
+    <mkdir dir="${build.tmp}/default/TextGenGen.zip" />
+    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)" />
+    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/lib" />
+    <mkdir dir="${build.tmp}/default/TextGenGen (fum).jar1" />
+    <mkdir dir="${build.tmp}/default/TextGenGen (fum).jar1/META-INF" />
+    <echoxml file="${build.tmp}/default/TextGenGen (fum).jar1/META-INF/plugin.xml">
+      <idea-plugin xmlns:xi="http://www.w3.org/2001/XInclude">
+        <id>TextGenGen</id>
+        <name>TextGenGen (fum)</name>
+        <description>Plugin for generation of the TextGen aspect from the Editor aspect aiming for generation of source code in the same form as the presentation rendered by the Editor.</description>
+        <version>2024.3.0-SNAPSHOT</version>
+        <depends>com.intellij.modules.platform</depends>
+        <depends>jetbrains.mps.core</depends>
+        <description>Editor to TextGen convertor</description>
+        <vendor>JetBrains</vendor>
+        <idea-version since-build="243" until-build="243.*" />
+        
+        <extensions defaultExtensionNs="com.intellij">
+          <mps.LanguageLibrary dir="/languages" />
+        </extensions>
+      </idea-plugin>
+    </echoxml>
+    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/lib/TextGenGen (fum).jar" duplicate="preserve">
+      <fileset dir="${build.tmp}/default/TextGenGen (fum).jar1" />
+    </jar>
+    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages" />
+    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen" />
+    <mkdir dir="${build.tmp}/default/TextGenGen.javastubs.jar1" />
+    <mkdir dir="${build.tmp}/default/TextGenGen.javastubs.jar1/META-INF" />
+    <echoxml file="${build.tmp}/default/TextGenGen.javastubs.jar1/META-INF/module.xml">
+      <module namespace="TextGenGen.javastubs" type="solution" uuid="c2d2f2e9-5f9b-403a-b789-a1fa58ff4e9b">
+        <dependencies>
+          <module ref="6354ebe7-c22a-4a0f-ac54-50b52ab9b065(JDK)" kind="cl" />
+        </dependencies>
+        <uses />
+        <library jar="../../../../TextGenGen (fum)/editorToText.jar" />
+        <classpath>
+          <entry path="." />
+        </classpath>
+        <sources jar="TextGenGen.javastubs-src.jar" descriptor="TextGenGen.javastubs.msd" />
+      </module>
+    </echoxml>
+    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen/TextGenGen.javastubs.jar" duplicate="preserve">
+      <fileset dir="${build.tmp}/java/out/TextGenGen.javastubs" />
+      <fileset dir="${project_home}/solutions/TextGenGen.javastubs/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
+      <fileset dir="${build.tmp}/default/TextGenGen.javastubs.jar1" />
+    </jar>
+    <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-TextGenGen.javastubs-models1">
+      <fileset dir="${project_home}/solutions/TextGenGen.javastubs/models" includes="**/*.mps, **/*.mpsr, **/.model" />
+    </copyModels>
+    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen/TextGenGen.javastubs-src.jar" duplicate="preserve">
+      <fileset dir="${project_home}/solutions/TextGenGen.javastubs/source_gen">
+        <exclude name="**/trace.info" />
+        <exclude name="**/exports" />
+        <exclude name="**/checkpoints" />
+        <exclude name="**/*.mps" />
+      </fileset>
+      <zipfileset file="${basedir}/solutions/TextGenGen.javastubs/TextGenGen.javastubs.msd" prefix="module" />
+      <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-TextGenGen.javastubs-models1" prefix="module/models" />
+    </jar>
+    <mkdir dir="${build.tmp}/default/TextGenGen.plugin.jar1" />
+    <mkdir dir="${build.tmp}/default/TextGenGen.plugin.jar1/META-INF" />
+    <echoxml file="${build.tmp}/default/TextGenGen.plugin.jar1/META-INF/module.xml">
+      <module namespace="TextGenGen.plugin" type="solution" uuid="2429ba7e-dca6-48f7-8628-d00e9ac44245">
+        <dependencies>
+          <module ref="6354ebe7-c22a-4a0f-ac54-50b52ab9b065(JDK)" kind="rt" />
+          <module ref="6ed54515-acc8-4d1e-a16c-9fd6cfe951ea(MPS.Core)" kind="rt" />
+          <module ref="8865b7a8-5271-43d3-884c-6fd1d9cfdd34(MPS.OpenAPI)" kind="rt" />
+          <module ref="7124e466-fc92-4803-a656-d7a6b7eb3910(MPS.TextGen)" kind="rt" />
+          <module ref="86441d7a-e194-42da-81a5-2161ec62a379(MPS.Workbench)" kind="rt" />
+          <module ref="4c6a28d1-2c60-478d-b36e-db9b3cbb21fb(closures.runtime)" kind="rt" />
+          <module ref="9b80526e-f0bf-4992-bdf5-cee39c1833f3(collections.runtime)" kind="rt" />
+          <module ref="a3e4657f-a76c-45bb-bbda-c764596ecc65(jetbrains.mps.baseLanguage.logging.runtime)" kind="rt" />
+          <module ref="52b81ac7-93fd-4e9e-b972-4995882da6d4(jetbrains.mps.baseLanguage.references.runtime)" kind="rt" />
+          <module ref="2d3c70e9-aab2-4870-8d8d-6036800e4103(jetbrains.mps.kernel)" kind="rt" />
+          <module ref="d936855b-48da-4812-a8a0-2bfddd633ac5(jetbrains.mps.lang.behavior.api)" kind="rt" />
+          <module ref="d936855b-48da-4812-a8a0-2bfddd633ac4(jetbrains.mps.lang.behavior.runtime)" kind="rt" />
+          <module ref="d7eb0a2a-bd50-4576-beae-e4a89db35f20(jetbrains.mps.lang.scopes.runtime)" kind="rt" />
+          <module ref="9a4afe51-f114-4595-b5df-048ce3c596be(jetbrains.mps.runtime)" kind="rt" />
+          <module ref="6354ebe7-c22a-4a0f-ac54-50b52ab9b065(JDK)" kind="cl" />
+          <module ref="6ed54515-acc8-4d1e-a16c-9fd6cfe951ea(MPS.Core)" kind="cl" />
+          <module ref="1ed103c3-3aa6-49b7-9c21-6765ee11f224(MPS.Editor)" kind="cl" />
+          <module ref="215c4c45-ba99-49f5-9ab7-4b6901a63cfd(MPS.Generator)" kind="cl" />
+          <module ref="8865b7a8-5271-43d3-884c-6fd1d9cfdd34(MPS.OpenAPI)" kind="cl" />
+          <module ref="742f6602-5a2f-4313-aa6e-ae1cd4ffdc61(MPS.Platform)" kind="cl" />
+          <module ref="7124e466-fc92-4803-a656-d7a6b7eb3910(MPS.TextGen)" kind="cl" />
+          <module ref="c2d2f2e9-5f9b-403a-b789-a1fa58ff4e9b(TextGenGen.javastubs)" kind="cl" />
+          <module ref="f3061a53-9226-4cc5-a443-f952ceaf5816(jetbrains.mps.baseLanguage)" kind="cl" />
+          <module ref="83888646-71ce-4f1c-9c53-c54016f6ad4f(jetbrains.mps.baseLanguage.collections)" kind="cl" />
+          <module ref="34e84b8f-afa8-4364-abcd-a279fddddbe7(jetbrains.mps.editor.runtime)" kind="cl" />
+          <module ref="ceab5195-25ea-4f22-9b92-103b95ca8c0c(jetbrains.mps.lang.core)" kind="cl" />
+          <module ref="18bc6592-03a6-4e29-a83a-7ff23bde13ba(jetbrains.mps.lang.editor)" kind="cl" />
+          <module ref="7866978e-a0f0-4cc7-81bc-4d213d9375e1(jetbrains.mps.lang.smodel)" kind="cl" />
+          <module ref="c72da2b9-7cce-4447-8389-f407dc1158b7(jetbrains.mps.lang.structure)" kind="cl" />
+          <module ref="c7fb639f-be78-4307-89b0-b5959c3fa8c8(jetbrains.mps.lang.text)" kind="cl" />
+          <module ref="b83431fe-5c8f-40bc-8a36-65e25f4dd253(jetbrains.mps.lang.textGen)" kind="cl" />
+        </dependencies>
+        <uses>
+          <language id="l:f3061a53-9226-4cc5-a443-f952ceaf5816:jetbrains.mps.baseLanguage" />
+          <language id="l:fd392034-7849-419d-9071-12563d152375:jetbrains.mps.baseLanguage.closures" />
+          <language id="l:83888646-71ce-4f1c-9c53-c54016f6ad4f:jetbrains.mps.baseLanguage.collections" />
+          <language id="l:f2801650-65d5-424e-bb1b-463a8781b786:jetbrains.mps.baseLanguage.javadoc" />
+          <language id="l:760a0a8c-eabb-4521-8bfd-65db761a9ba3:jetbrains.mps.baseLanguage.logging" />
+          <language id="l:ceab5195-25ea-4f22-9b92-103b95ca8c0c:jetbrains.mps.lang.core" />
+          <language id="l:28f9e497-3b42-4291-aeba-0a1039153ab1:jetbrains.mps.lang.plugin" />
+          <language id="l:ef7bf5ac-d06c-4342-b11d-e42104eb9343:jetbrains.mps.lang.plugin.standalone" />
+          <language id="l:3a13115c-633c-4c5c-bbcc-75c4219e9555:jetbrains.mps.lang.quotation" />
+          <language id="l:7866978e-a0f0-4cc7-81bc-4d213d9375e1:jetbrains.mps.lang.smodel" />
+          <language id="l:b83431fe-5c8f-40bc-8a36-65e25f4dd253:jetbrains.mps.lang.textGen" />
+        </uses>
+        <classpath>
+          <entry path="." />
+        </classpath>
+        <sources jar="TextGenGen.plugin-src.jar" descriptor="TextGenGen.plugin.msd" />
+      </module>
+    </echoxml>
+    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen/TextGenGen.plugin.jar" duplicate="preserve">
+      <fileset dir="${build.tmp}/java/out/TextGenGen.plugin" />
+      <fileset dir="${project_home}/solutions/TextGenGen.plugin/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
+      <fileset dir="${build.tmp}/default/TextGenGen.plugin.jar1" />
+    </jar>
+    <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-TextGenGen.plugin-models1">
       <fileset dir="${project_home}/solutions/TextGenGen.plugin/models" includes="**/*.mps, **/*.mpsr, **/.model" />
     </copyModels>
     <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen/TextGenGen.plugin-src.jar" duplicate="preserve">
@@ -176,7 +311,7 @@
         <exclude name="**/*.mps" />
       </fileset>
       <zipfileset file="${basedir}/solutions/TextGenGen.plugin/TextGenGen.plugin.msd" prefix="module" />
-      <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-TextGenGen.plugin-models" prefix="module/models" />
+      <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-TextGenGen.plugin-models1" prefix="module/models" />
     </jar>
     <zip destfile="${build.layout}/TextGenGen.zip">
       <zipfileset file="${project_home}/solutions/TextGenGen.javastubs/java_src/lib/editorToText.jar" prefix="TextGenGen (fum)" />
@@ -1095,7 +1230,7 @@
       <plugin id="jetbrains.mps.vcs" path="${artifacts.mps}/plugins/mps-vcs" />
       <plugin id="Git4Idea" path="${artifacts.mps}/plugins/vcs-git" />
       <plugin id="Subversion" path="${artifacts.mps}/plugins/vcs-svn" />
-      <plugin id="TextGenGen" path="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)" />
+      <plugin id="TextGenGen" path="${build.layout}/TextGenGen (fum)" />
       <project path="${basedir}" />
       <testmodules>        
         <path refid="mps.tests.path" />
