--- a/build.xml
+++ b/build.xml
@@ -54,7 +54,7 @@
         <id>TextGenGen</id>
         <name>TextGenGen (fum)</name>
         <description>Plugin for generation of the TextGen aspect from the Editor aspect aiming for generation of source code in the same form as the presentation rendered by the Editor.</description>
-        <version>2024.3.0-SNAPSHOT</version>
+        <version>2024.3.0</version>
         <depends>com.intellij.modules.platform</depends>
         <depends>jetbrains.mps.core</depends>
         <description>Editor to TextGen convertor</description>
